--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-ibm-watsonx-ai==1.1.20
-image==1.5.33
 requests==2.32.0
 pillow==11.0.0
+pillow-avif-plugin==1.5.2
 transformers==4.46.3
-torch==2.5.1
-torchvision==0.20.1
+torch>=2.6.0
+torchvision>=0.21.0
 ipywidgets==8.1.3
 google-search-results==2.4.2
 scikit-learn==1.5.2
